<resources>
    <string name="app_name">Tipster</string>
    <string name="bill">Bill $</string>
    <string name="decrement">-</string>
    <string name="tip">Tip %</string>
    <string name="increment">+</string>
    <string name="number_of_people">People</string>
    <string name="tip_label">Tip(pp): $</string>
    <string name="total_label">Total(pp): $</string>
    <string name="tip_default_amount">15</string>
    <string name="people_default_amount">2</string>
</resources>