<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/bill_text_input_layout"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".5"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bill_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/bill"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decrement_tip_button"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:text="@string/decrement"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:layout_constraintTop_toTopOf="@id/tip_text_input_layout"
        app:layout_constraintLeft_toLeftOf="@id/bill_text_input_layout"
        app:layout_constraintRight_toLeftOf="@id/tip_text_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/tip_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tip_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/bill_text_input_layout"
        app:layout_constraintLeft_toRightOf="@id/decrement_tip_button"
        app:layout_constraintRight_toLeftOf="@id/increment_tip_button" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tip_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/tip"
            android:text="@string/tip_default_amount"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/increment_tip_button"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:text="@string/increment"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:layout_constraintTop_toTopOf="@id/tip_text_input_layout"
        app:layout_constraintLeft_toRightOf="@id/tip_text_input_layout"
        app:layout_constraintRight_toRightOf="@id/bill_text_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/tip_text_input_layout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/decrement_people_button"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:text="@string/decrement"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:layout_constraintTop_toTopOf="@id/people_text_input_layout"
        app:layout_constraintLeft_toLeftOf="@id/bill_text_input_layout"
        app:layout_constraintRight_toLeftOf="@id/people_text_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/people_text_input_layout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/people_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintTop_toBottomOf="@id/tip_text_input_layout"
        app:layout_constraintLeft_toRightOf="@id/decrement_people_button"
        app:layout_constraintRight_toLeftOf="@id/increment_people_button" >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number_of_people"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/number_of_people"
            android:text="@string/people_default_amount"
            android:inputType="numberDecimal"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/increment_people_button"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:text="@string/increment"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        app:layout_constraintTop_toTopOf="@id/people_text_input_layout"
        app:layout_constraintLeft_toRightOf="@id/people_text_input_layout"
        app:layout_constraintRight_toRightOf="@id/bill_text_input_layout"
        app:layout_constraintBottom_toBottomOf="@id/people_text_input_layout" />

    <View
        android:id="@+id/separator_view"
        android:layout_width="0dp"
        android:layout_height="2dp"
        android:layout_margin="15dp"
        android:background="?android:attr/listDivider"
        app:layout_constraintTop_toBottomOf="@id/people_text_input_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tip_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/tip_label"
        app:layout_constraintTop_toBottomOf="@id/separator_view"
        app:layout_constraintStart_toStartOf="@id/bill_text_input_layout" />

    <TextView
        android:id="@+id/tip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/separator_view"
        app:layout_constraintStart_toEndOf="@id/tip_label" />

    <TextView
        android:id="@+id/total_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text="@string/total_label"
        app:layout_constraintTop_toBottomOf="@id/tip_label"
        app:layout_constraintStart_toStartOf="@id/bill_text_input_layout" />

    <TextView
        android:id="@+id/total_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:text=""
        app:layout_constraintTop_toBottomOf="@id/tip_label"
        app:layout_constraintStart_toEndOf="@id/total_label" />

</androidx.constraintlayout.widget.ConstraintLayout>